# agentic-rag-chatbot-thomaglads

./: .env.example  .gitignore  ARCHITECTURE.md  COMPANY_MEMORY.md  EVAL_QUESTIONS.md  Makefile  PHASE3_REMEDIATION_COMPLETE.md  README.md  USER_MEMORY.md  debug_trace.py  pyproject.toml  temp_original_app.py  traceback.txt
sample_docs/: README.md  sample_safety_manual.txt  site_protocols.txt  test_safety_rules.txt
scripts/: download_osha_docs.py  sanity_check.py  sanity_check.sh
src/: __init__.py
src/agent/: __init__.py  compliance_agent.py
src/interfaces/: __init__.py  protocols.py
src/memory/: __init__.py  manager.py  models.py
src/rag/: __init__.py  document_store.py  ingestion.py  llama_engine.py  retriever.py
src/ui/: __init__.py  app.py  cli.py  style.css
src/utils/: __init__.py  factory.py  logging_config.py  report_generator.py
src/weather/: __init__.py  client.py  sandbox.py
